--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-
-    <script src="https://kit.fontawesome.com/32f46886f2.js" crossorigin="anonymous"></script>
+    
 
 
     <title>Perros Veganos</title>
@@ -22,10 +21,10 @@
             <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-house"></i> Home</a>
+                        <a class="nav-link" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-shop"></i> Tienda</a>
+                        <a class="nav-link" href="perfil.html"><i class="fa-solid fa-shop"></i> Tienda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa-solid fa-arrow-right-to-bracket"></i> Log In</a>
@@ -142,7 +141,7 @@
                             Placa identificación dorada
                         </h3>
                         <h5 class="color-verde-oscuro">
-                            <i class="fa-solid fa-dollar-sign"></i> $8,990
+                            <i class="fa-solid fa-dollar-sign"></i> 8,990
                         </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button">Agregar al carrito</a>
@@ -209,6 +208,7 @@
         </div>
             
     </div>
+<script src="https://kit.fontawesome.com/32f46886f2.js" crossorigin="anonymous"></script>
 <!-- jQuery library -->
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
 
