--- a/historial.html
+++ b/historial.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Tienda</title>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/32f46886f2.js" crossorigin="anonymous"></script> 
+    <title>Document</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm letra-navbar navbar-light borde pr-5">
@@ -49,10 +53,10 @@
                     <div class="col-sm-12">
                         <ul class="nav nav-pills flex-column mt-3">
                             <li class="nav-item activo rounded mt-1">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-home"></i> Perfil</a>
+                                <a class="nav-link" href="perfil.html"><i class="fa-solid fa-home"></i> Perfil</a>
                             </li>
                             <li class="nav-item mt-4">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-clock-rotate-left"></i> Historial</a>
+                                <a class="nav-link" href="historial.html"><i class="fa-solid fa-clock-rotate-left"></i> Historial</a>
                             </li>
                             <li class="nav-item mt-4">
                                 <a class="nav-link" href="#"><i class="fa-solid fa-truck"></i> Seguimiento</a>
@@ -71,51 +75,48 @@
             </div>
             <div class="col-sm-10">
                 <div class="row">
-                    <div class="col-sm-3 d-flex justify-content-around  pt-5 mt-5 align-items-center">
-                        <div class="card" style="width:200px; border: none">
-                            <img class="card-img-top" src="img/tienda-icono.png" alt="Card image">
-                            <div class="card-body">
-                              <h4 class="card-title">Tienda</h4>
-                              <p class="card-text">Revisa nuestro catalogo!</p>
-                              <a href="#" class="btn btn-primary">See Profile</a>
-                            </div>
-                          </div>
-
-                    </div>
-                    <div class="col-sm-3 d-flex justify-content-around  pt-5 mt-5 align-items-center">
-                        <div class="card" style="width:200px; border: none">
-                            <img class="card-img-top" src="img/historial-icono.png" alt="Card image">
-                            <div class="card-body">
-                              <h4 class="card-title">Historial</h4>
-                              <p class="card-text">Consulta el historial de compras.</p>
-                              <a href="historial.html" class="btn fondo">Ir</a>
-                            </div>
-                          </div>
-                    </div>
-
-
-                    <div class="col-sm-3 d-flex justify-content-around pt-5 mt-5 align-items-center"> 
-                        <div class="card" style="width:200px; border: none;">
-                            <img class="card-img-top" src="img/delivery-icono.png" alt="Card image">
-                            <div class="card-body">
-                              <h4 class="card-title">Despacho</h4>
-                              <p class="card-text">Consulta el estado de tu pedido</p>
-                              <a href="seguimiento.html" class="btn fondo">Ir</a>
-                            </div>
-                          </div>
-                    </div>
-                    <div class="col-sm-3 d-flex justify-content-around  pt-5 mt-5 align-items-center">
-                        <div class="card" style="width:200px; border: none">
-                            <img class="card-img-top" src="img/fundacion-icono.png" alt="Card image">
-                            <div class="card-body">
-                              <h4 class="card-title">Fundación</h4>
-                              <p class="card-text">Suscribete y descubre mas sobre la fundación</p>
-                              <a href="#" class="btn btn-primary">See Profile</a>
-                            </div>
-                          </div>
+                    <div class="container mt-5">
+                    <h2>Historial</h2>
+                    <input class="form-control" id="myInput" type="text" placeholder="Buscar...">
+                    <br>
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Cantidad</th>
+                            <th>Fecha</th>
+                            <th>Precio</th>
+                            <th>Estado</th>
+                        </tr>
+                        </thead>
+                        <tbody id="myTable">
+                        <tr>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>john@example.com</td>
+                            <td>$9.999</td>
+                            <td>Completado</td>
+                        </tr>
+                        <tr>
+                            <td>Mary</td>
+                            <td>Moe</td>
+                            <td>mary@mail.com</td>
+                        </tr>
+                        <tr>
+                            <td>July</td>
+                            <td>Dooley</td>
+                            <td>july@greatstuff.com</td>
+                        </tr>
+                        <tr>
+                            <td>Anja</td>
+                            <td>Ravendale</td>
+                            <td>a_r@test.com</td>
+                        </tr>
+                        </tbody>
+                    </table>                    
                     </div>
                 </div>
-            </div>
+           </div>
         </div>
         <div class="row">
             <div class="col-sm-12 borde">
@@ -133,7 +134,7 @@
                                 <a class="nav-link" href="#"></a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link disabled" href="#">Disabled</a>
+                                <a class="nav-link" href="#">Disabled</a>
                               </li>
                             </ul>
                           </nav>
@@ -156,8 +157,18 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>        
     </div>
-<script src="https://kit.fontawesome.com/32f46886f2.js" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function(){
+          $("#myInput").on("keyup", function() {
+            var value = $(this).val().toLowerCase();
+            $("#myTable tr").filter(function() {
+              $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+          });
+        });
+    </script> 
+<script src="https://kit.fontawesome.com/32f46886f2.js" crossorigin="anonymous"></script>   
 </body>
 </html>
