--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                         <a class="nav-link" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="perfil.html"><i class="fa-solid fa-shop"></i> Tienda</a>
+                        <a class="nav-link" href="tienda.html"><i class="fa-solid fa-shop"></i> Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-arrow-right-to-bracket"></i> Log In</a>
+                        <a class="nav-link" href="login.html"><i class="fa-solid fa-arrow-right-to-bracket"></i> Log In</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pr-5" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -174,7 +174,7 @@
                     <nav class="navbar navbar-light flex-column">
                         <ul class="navbar-nav">
                           <li class="nav-item active mt-4">
-                            <a class="nav-link" href="#">HOME</a>
+                            <a class="nav-link" href="perfil.html">HOME</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#">TIENDA</a>
