--- a/login.html
+++ b/login.html
@@ -9,12 +9,12 @@
 
     <script src="https://kit.fontawesome.com/32f46886f2.js" crossorigin="anonymous"></script>
     
-    <title>Perros Veganos</title>
+    <title>Iniciar Sesión</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm letra-navbar navbar-light borde pr-5">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" style="width: 50px;"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" style="width: 50px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,10 +27,10 @@
                         <a class="nav-link" href="tienda.html"><i class="fa-solid fa-shop"></i> Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html"><i class="fa-solid fa-arrow-right-to-bracket"></i> Log In</a>
+                        <a class="nav-link" href="login.html"><i class="fa-solid fa-user"></i> Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pr-5" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                        <a class="nav-link pr-5" href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
                     </li>
                 </ul>
             </div>
@@ -38,11 +38,11 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4" style="height: 68vh;">
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 pt-5">
                 <div class="container">
-                    <h2 class="color-verde-oscuro">Inicie Sesión</h2>
+                    <h2 class="color-verde-oscuro pb-4">Inicie Sesión</h2>
                     <form action="/action_page.php">
                       <div class="form-group">
                         <label for="email">Correo electronico:</label> 
@@ -57,38 +57,14 @@
                           <input class="form-check-input" type="checkbox" name="remember"> Recordar
                         </label>
                       </div>
-                      <!--<h6>¿No tienes una cuenta?<a class="nav-link" href="login.html">Registrarse</a></h6> -->
-                      <p>¿No tiene una cuenta? <a class="nav-link" href="register.html">Registrarse</a></p>
-                      <button type="ingreso-login" class="btn btn-success">Ingresar</button>
+                      <p>¿No tiene una cuenta? <a href="register.html">Registrarse</a></p>
+                      <a href="perfil.html" type="ingreso-login" class="btn btn-success">Ingresar</a>
                     </form>
                   </div>
             </div>
             <div class="col-sm-4"></div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <div class="row">
@@ -98,16 +74,13 @@
                     <nav class="navbar navbar-light flex-column">
                         <ul class="navbar-nav">
                           <li class="nav-item active mt-4">
-                            <a class="nav-link" href="#">HOME</a>
+                            <a class="nav-link" href="index.html">HOME</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">TIENDA</a>
+                            <a class="nav-link" href="tienda.html">TIENDA</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#"></a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Disabled</a>
+                            <a class="nav-link" href="login.html">LOGIN</a>
                           </li>
                         </ul>
                       </nav>
