--- a/perfil.html
+++ b/perfil.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Tienda</title>
+    <title>Perfil</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm letra-navbar navbar-light borde pr-5">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" style="width: 50px;"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" style="width: 50px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -21,13 +21,13 @@
                         <a class="nav-link" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="perfil.html"><i class="fa-solid fa-shop"></i> Tienda</a>
+                        <a class="nav-link" href="tienda.html"><i class="fa-solid fa-shop"></i> Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-arrow-right-to-bracket"></i> Log In</a>
+                        <a class="nav-link" href="login.html"><i class="fa-solid fa-user"></i> Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pr-5" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                        <a class="nav-link pr-5" href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
                     </li>
                 </ul>
             </div>
@@ -49,20 +49,20 @@
                     <div class="col-sm-12">
                         <ul class="nav nav-pills flex-column mt-3">
                             <li class="nav-item activo rounded mt-1">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-home"></i> Perfil</a>
+                                <a class="nav-link" href="perfil.html"><i class="fa-solid fa-home"></i> Perfil</a>
                             </li>
                             <li class="nav-item mt-4">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-clock-rotate-left"></i> Historial</a>
+                                <a class="nav-link" href="historial.html"><i class="fa-solid fa-clock-rotate-left"></i> Historial</a>
                             </li>
                             <li class="nav-item mt-4">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-truck"></i> Seguimiento</a>
+                                <a class="nav-link" href="seguimiento.html"><i class="fa-solid fa-truck"></i> Seguimiento</a>
                             </li>
                             <li class="nav-item mt-4">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-bookmark"></i> Fundación</a>
+                                <a class="nav-link" href="fundacion.html"><i class="fa-solid fa-bookmark"></i> Fundación</a>
                             </li>
                             <hr><hr>
                             <li class="nav-item mt-5">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-right-to-bracket"></i> Cerrar
+                                <a class="nav-link" href="index.html"><i class="fa-solid fa-right-to-bracket"></i> Cerrar
                                     Sesión</a>
                             </li>
                         </ul>
@@ -77,7 +77,7 @@
                             <div class="card-body">
                               <h4 class="card-title">Tienda</h4>
                               <p class="card-text">Revisa nuestro catalogo!</p>
-                              <a href="#" class="btn btn-primary">See Profile</a>
+                              <a href="tienda.html" class="btn fondo">Ir</a>
                             </div>
                           </div>
 
@@ -110,7 +110,7 @@
                             <div class="card-body">
                               <h4 class="card-title">Fundación</h4>
                               <p class="card-text">Suscribete y descubre mas sobre la fundación</p>
-                              <a href="#" class="btn btn-primary">See Profile</a>
+                              <a href="fundacion.html" class="btn fondo">Ir</a>
                             </div>
                           </div>
                     </div>
@@ -124,16 +124,13 @@
                         <nav class="navbar navbar-light flex-column">
                             <ul class="navbar-nav">
                               <li class="nav-item active mt-4">
-                                <a class="nav-link" href="#">HOME</a>
+                                <a class="nav-link" href="index.html">HOME</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">TIENDA</a>
+                                <a class="nav-link" href="tienda.html">TIENDA</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#"></a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link disabled" href="#">Disabled</a>
+                                <a class="nav-link" href="login.html">LOGIN</a>
                               </li>
                             </ul>
                           </nav>
