--- a/seguimiento.html
+++ b/seguimiento.html
@@ -10,12 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/32f46886f2.js" crossorigin="anonymous"></script> 
-    <title>Document</title>
+    <title>Seguimiento</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-sm letra-navbar navbar-light borde pr-5">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" alt="" style="width: 50px;"></a>
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="" style="width: 50px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -25,18 +25,19 @@
                         <a class="nav-link" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="perfil.html"><i class="fa-solid fa-shop"></i> Tienda</a>
+                        <a class="nav-link" href="tienda.html"><i class="fa-solid fa-shop"></i> Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fa-solid fa-arrow-right-to-bracket"></i> Log In</a>
+                        <a class="nav-link" href="login.html"><i class="fa-solid fa-user"></i> Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pr-5" href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                        <a class="nav-link pr-5" href="carrito.html"><i class="fa-solid fa-cart-shopping"></i></a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
 
     <div class="container-fluid">
         <div class="row">
@@ -62,11 +63,11 @@
                                 <a class="nav-link" href="seguimiento.html"><i class="fa-solid fa-truck"></i> Seguimiento</a>
                             </li>
                             <li class="nav-item mt-4">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-bookmark"></i> Fundación</a>
+                                <a class="nav-link" href="fundacion.html"><i class="fa-solid fa-bookmark"></i> Fundación</a>
                             </li>
                             <hr><hr>
                             <li class="nav-item mt-5">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-right-to-bracket"></i> Cerrar
+                                <a class="nav-link" href="index.html"><i class="fa-solid fa-right-to-bracket"></i> Cerrar
                                     Sesión</a>
                             </li>
                         </ul>
@@ -74,9 +75,16 @@
                 </div>
             </div>
             <div class="col-sm-10">
-                
+                <div class="container text-center mt-5">
+                    <p>Para saber en que etapa se encuentra su pedido ingrese su codigo de seguimiento</p>
+                    <label for="cod-seg">Codigo de seguimiento:</label>
+                    <input type="text" class="form-control" id="cod-seg" placeholder="Ej:424534523432-2">
+                    <a type="ver-segui" class="btn btn-success mt-2" class="seguimientovista text-white" href="seguimientovista.html">Buscar</a>
+                </div>
             </div>
         </div>
+
+
         <div class="row">
             <div class="col-sm-12 borde">
                 <div class="row text-center">       
@@ -84,16 +92,13 @@
                         <nav class="navbar navbar-light flex-column">
                             <ul class="navbar-nav">
                               <li class="nav-item active mt-4">
-                                <a class="nav-link" href="#">HOME</a>
+                                <a class="nav-link" href="index.html">HOME</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#">TIENDA</a>
+                                <a class="nav-link" href="tienda.html">TIENDA</a>
                               </li>
                               <li class="nav-item">
-                                <a class="nav-link" href="#"></a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Disabled</a>
+                                <a class="nav-link" href="login.html">LOGIN</a>
                               </li>
                             </ul>
                           </nav>
@@ -118,16 +123,7 @@
             </div>
         </div>        
     </div>
-    <script>
-        $(document).ready(function(){
-          $("#myInput").on("keyup", function() {
-            var value = $(this).val().toLowerCase();
-            $("#myTable tr").filter(function() {
-              $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-            });
-          });
-        });
-    </script> 
+    
 <script src="https://kit.fontawesome.com/32f46886f2.js" crossorigin="anonymous"></script>   
 </body>
 </html>
