--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 mt-5 mb-5">
-                        <a href="#" class="btn fondo" style="width: 10%;" role="button">Ir a Tienda</a>
+                        <a href="tienda.html" class="btn fondo" style="width: 10%;" role="button">Ir a Tienda</a>
                     </div>
                 </div>
             </div>
@@ -206,30 +206,7 @@
         </div>
     </div>
 
-    <!-- The Modal -->
-    <div class="modal fade" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content modal-carrito">
 
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h4 class="modal-title">Modal Heading</h4>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-
-                <!-- Modal body -->
-                <div class="modal-body">
-                    Modal body..
-                </div>
-
-                <!-- Modal footer -->
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                </div>
-
-            </div>
-        </div>
-    </div>
     <!-- Modal Bandana-->
     <div class="modal fade" id="modal-bandana">
         <div class="modal-dialog">
