--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                         <h5 class="color-verde-oscuro">
                             <i class="fa-solid fa-dollar-sign"></i> 16.490
                         </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 6
+                        </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#modal-bandana">Agregar al carrito</a>
                     </div>
@@ -126,6 +129,9 @@
                         </h3>
                         <h5 class="color-verde-oscuro ">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
+                        </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 7
                         </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#modal-correa">Agregar al carrito</a>
@@ -139,6 +145,9 @@
                         <h5 class="color-verde-oscuro">
                             <i class="fa-solid fa-dollar-sign"></i> 8,990
                         </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 14
+                        </h5>
                         <br>
                         <a href="" class="btn fondo" role="button " data-toggle="modal" data-target="#modal-medalla">Agregar
                             al carrito</a>
@@ -151,6 +160,9 @@
                         </h3>
                         <h5 class="color-verde-oscuro">
                             <i class="fa-solid fa-dollar-sign"></i> 15.990
+                        </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 11
                         </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#modal-arnes">Agregar
