--- a/seguimiento.html
+++ b/seguimiento.html
@@ -74,7 +74,14 @@
                     </div>
                 </div>
             </div>
-
+            <div class="col-sm-10">
+                <div class="container text-center mt-5">
+                    <p>Para saber en que etapa se encuentra su pedido ingrese su codigo de seguimiento</p>
+                    <label for="cod-seg">Codigo de seguimiento:</label>
+                    <input type="text" class="form-control" id="cod-seg" placeholder="Ej:424534523432-2">
+                    <button type="ver-segui" class="btn btn-success mt-2"><a class="seguimientovista text-white" href="seguimientovista.html">Buscar</a></button>
+                </div>
+            </div>
         </div>
 
 
