--- a/tienda.html
+++ b/tienda.html
@@ -56,6 +56,9 @@
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 16.490
                         </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 6
+                        </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal"
                             data-target="#modal-bandana">Agregar
@@ -68,6 +71,9 @@
                         </h3>
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
+                        </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 14
                         </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal"
@@ -83,6 +89,9 @@
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
                         </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 7
+                        </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal"
                             data-target="#modal-correa">Agregar
@@ -95,6 +104,9 @@
                         </h3>
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
+                        </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 11
                         </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal"
@@ -110,6 +122,9 @@
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
                         </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 8
+                        </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#myModal">Agregar
                             al carrito</a>
@@ -121,6 +136,9 @@
                         </h3>
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
+                        </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 4
                         </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#myModal">Agregar
@@ -135,6 +153,9 @@
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
                         </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 1
+                        </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#myModal">Agregar
                             al carrito</a>
@@ -146,6 +167,9 @@
                         </h3>
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
+                        </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 23
                         </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#myModal">Agregar
@@ -160,6 +184,9 @@
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
                         </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 54
+                        </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#myModal">Agregar
                             al carrito</a>
@@ -172,6 +199,9 @@
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
                         </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 12
+                        </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#myModal">Agregar
                             al carrito</a>
@@ -180,10 +210,13 @@
                         <img class="img-producto pt-4" src="img/correaperro.png" alt="">
                         <hr>
                         <h3 class="color-verde-oscuro text-center">
-                            correa calipso Xl
+                            correa calipso XL
                         </h3>
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
+                        </h5>
+                        <h5 class="color-verde-oscuro">
+                            Stock: 18
                         </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#myModal">Agregar
@@ -196,6 +229,9 @@
                         </h3>
                         <h5 class="color-verde-oscuro text-center">
                             <i class="fa-solid fa-dollar-sign"></i> 17.990
+                        </h5>
+                        <h5 class="color-verde-oscuro">
+                            Agotado
                         </h5>
                         <br>
                         <a href="#" class="btn fondo" role="button" data-toggle="modal" data-target="#myModal">Agregar
