--- a/seguimiento.html
+++ b/seguimiento.html
@@ -19,6 +19,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <h2>DOG VEGAN</h2>
             <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -79,7 +80,7 @@
                     <p>Para saber en que etapa se encuentra su pedido ingrese su codigo de seguimiento</p>
                     <label for="cod-seg">Codigo de seguimiento:</label>
                     <input type="text" class="form-control" id="cod-seg" placeholder="Ej:424534523432-2">
-                    <button type="ver-segui" class="btn btn-success mt-2"><a class="seguimientovista text-white" href="seguimientovista.html">Buscar</a></button>
+                    <a type="ver-segui" class="btn btn-success mt-2 seguimientovista text-white" href="seguimientovista.html">Buscar</a>
                 </div>
             </div>
         </div>
