--- a/tienda.html
+++ b/tienda.html
@@ -21,6 +21,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <h2>DOG VEGAN</h2>
             <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -70,7 +71,7 @@
                             Placa identificación dorada
                         </h3>
                         <h5 class="color-verde-oscuro text-center">
-                            <i class="fa-solid fa-dollar-sign"></i> 17.990
+                            <i class="fa-solid fa-dollar-sign"></i> 8.990
                         </h5>
                         <h5 class="color-verde-oscuro">
                             Stock: 14
@@ -103,7 +104,7 @@
                             Arnés pechera rojo
                         </h3>
                         <h5 class="color-verde-oscuro text-center">
-                            <i class="fa-solid fa-dollar-sign"></i> 17.990
+                            <i class="fa-solid fa-dollar-sign"></i> 15.990 
                         </h5>
                         <h5 class="color-verde-oscuro">
                             Stock: 11
