--- a/carrito.html
+++ b/carrito.html
@@ -19,6 +19,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <h2>DOG VEGAN</h2>
             <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -76,7 +77,7 @@
                             <div class="col-sm-7">
                                 <form class="mb-5">
                                     <h4 class="text-center pt-4 pb-2 pr-4">Placa identificación dorada</h4>
-                                    <h6 class="text-center pb-2"><i class="fa-solid fa-dollar-sign"></i> 8,990</h6>
+                                    <h6 class="text-center pb-2"><i class="fa-solid fa-dollar-sign"></i> 8.990</h6>
                                     <div class="input-group mb-3">
                                         <div class="input-group-prepend">
                                           <button class="btn btn-success" type="button" id="boton2">-</button>
