--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <h2>DOG VEGAN</h2>
             <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -143,7 +144,7 @@
                             Placa identificación dorada
                         </h3>
                         <h5 class="color-verde-oscuro">
-                            <i class="fa-solid fa-dollar-sign"></i> 8,990
+                            <i class="fa-solid fa-dollar-sign"></i> 8.990
                         </h5>
                         <h5 class="color-verde-oscuro">
                             Stock: 14
